--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,28 @@
 {
   "compilerOptions": {
     "outDir": "./build/",
+    "lib": ["es6", "dom"],
+    "typeRoots": ["src/types"],
     "sourceMap": true,
     "noImplicitAny": true,
+    "noImplicitThis": true,
     "module": "esnext",
     "target": "es2015",
     "allowJs": true,
     "jsx": "react-jsx",
     "moduleResolution": "node",
     "allowSyntheticDefaultImports": true,
-    "baseUrl": "src"
+    "baseUrl": "src",
+    "paths": {
+      "@/*": ["*"],
+      "@assets/*": ["assets/*"],
+      "@components/*": ["components/*"],
+      "@layouts": ["layouts"],
+      "@layouts/*": ["layouts/*"],
+      "@themes": ["themes"],
+      "@types/*": ["types/*"]
+    }
   },
+  "include": ["./src/**/*"],
   "exclude": ["./node_modules/**/*"]
 }
