--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@mui/material": "^5.7.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-icons": "^4.3.1",
     "webpack-dev-server": "^4.9.0"
   }
 }
