feat(ui): :lipstick: create sidebar and its accordion

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,7 @@
       "@components/*": ["components/*"],
       "@layouts": ["layouts"],
       "@layouts/*": ["layouts/*"],
+      "@hooks": ["hooks"],
       "@themes": ["themes"],
       "@types/*": ["types/*"]
     }
