--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "webpack-cli": "^4.9.2"
   },
   "dependencies": {
+    "@devbookhq/splitter": "^1.3.2",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@mui/material": "^5.7.0",
