--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-icons": "^4.3.1",
+    "rxjs": "^7.5.5",
     "webpack-dev-server": "^4.9.0"
   }
 }
