--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@devbookhq/splitter": "^1.3.2",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
+    "@monaco-editor/react": "^4.4.5",
     "@mui/material": "^5.7.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
