feat(app): :sparkles: read repo files using github api

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "babel-loader": "^8.2.5",
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.7.1",
+    "dotenv-webpack": "^7.1.0",
     "eslint": "^8.15.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-jsx-a11y": "^6.5.1",
@@ -50,6 +51,7 @@
     "@emotion/styled": "^11.8.1",
     "@monaco-editor/react": "^4.4.5",
     "@mui/material": "^5.7.0",
+    "octokit": "^1.7.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-icons": "^4.3.1",
