--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@monaco-editor/react": "^4.4.5",
+    "@mui/lab": "^5.0.0-alpha.82",
     "@mui/material": "^5.7.0",
     "octokit": "^1.7.1",
     "react": "^18.1.0",
