feat(app): :sparkles: multiple mode editor file support

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,7 +25,8 @@
       "@store": ["store"],
       "@models": ["models"],
       "@utils/*": ["utils/*"],
-      "@api/*": ["api/*"]
+      "@api/*": ["api/*"],
+      "@hoc/*": ["hoc/*"]
     }
   },
   "include": ["./src/**/*"],
