chore: add scripts command for prettier and eslint

--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "description": "VS Code Clone using ReactJS, Webpack 5, and Material UI",
   "main": "index.js",
   "scripts": {
-    "clean": "rm build/**",
+    "clean": "rimraf build",
     "start": "webpack serve --env development",
     "build-dev": "webpack --mode development",
-    "build-prod": "webpack --mode production"
+    "build-prod": "webpack --mode production",
+    "lint": "eslint src/**/*.{js,jsx,ts,tsx,json}",
+    "lint:fix": "eslint --fix 'src/**/*.{js,jsx,ts,tsx,json}'",
+    "format": "prettier --write 'src/**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc"
   },
   "keywords": [
     "VS Code Clone",
