feat(app): :sparkles: add accordion height dynamically in explorer activitybar

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,7 +27,8 @@
       "@utils/*": ["utils/*"],
       "@api/*": ["api/*"],
       "@hoc/*": ["hoc/*"],
-      "@atoms/*": ["atoms/*"]
+      "@atoms/*": ["atoms/*"],
+      "@context": ["context"]
     }
   },
   "include": ["./src/**/*"],
