feat(app): :sparkles: add preview for markdown files

--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@babel/preset-env": "^7.17.10",
     "@babel/preset-react": "^7.16.7",
     "@svgr/webpack": "^6.2.1",
+    "@types/dompurify": "^2.3.3",
+    "@types/marked": "^4.0.3",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.3",
     "@typescript-eslint/eslint-plugin": "^5.23.0",
@@ -55,6 +57,8 @@
     "@monaco-editor/react": "^4.4.5",
     "@mui/lab": "^5.0.0-alpha.82",
     "@mui/material": "^5.7.0",
+    "dompurify": "^2.3.8",
+    "marked": "^4.0.16",
     "octokit": "^1.7.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
