--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "@mui/lab": "^5.0.0-alpha.82",
     "@mui/material": "^5.7.0",
     "dompurify": "^2.3.8",
+    "idb": "^7.0.1",
     "marked": "^4.0.16",
     "octokit": "^1.7.1",
     "react": "^18.1.0",
