--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "url-loader": "^4.1.1",
     "webpack": "^5.72.1",
     "webpack-bundle-analyzer": "^4.5.0",
-    "webpack-cli": "^4.9.2"
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.9.0"
   },
   "dependencies": {
     "@devbookhq/splitter": "^1.3.2",
@@ -65,7 +66,6 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-icons": "^4.3.1",
-    "rxjs": "^7.5.5",
-    "webpack-dev-server": "^4.9.0"
+    "rxjs": "^7.5.5"
   }
 }
